Resolve mobile screen stretching

--- a/PlanIT-Front-End-React/src/components/DashboardContent/DashboardContentStyle.css
+++ b/PlanIT-Front-End-React/src/components/DashboardContent/DashboardContentStyle.css
@@ -24,6 +24,8 @@
     color: rgb(206, 230, 201);
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(30px, 5vw, 45px); 
+    white-space: nowrap;
+    overflow-x: auto;
 }
 
 .chart {
