--- a/PlanIT-Front-End-React/src/components/SpendingDashboard/SpendingDashboardStyle.css
+++ b/PlanIT-Front-End-React/src/components/SpendingDashboard/SpendingDashboardStyle.css
@@ -54,6 +54,7 @@
         'spendingRecords'
         'spendingRecords';
     overflow-y: auto; 
+    overflow-x: hidden;
 
 }
 
